# warface-fastzoom

./: .gitignore  CMakeLists.txt  README.md  appCore.cpp  appCore.h  appSettings.cpp  appSettings.h  build.sh  logger.cpp  logger.h  main.cpp  stringSplit.cpp  warface-fastzoom.cpp
libs/logger/include/: logger.h
libs/stringUtils/include/: stringSplit.h  stringTrim.h
libs/stringUtils/src/: stringTrim.cpp
src/: appCore.cpp  appSettings.cpp  main.cpp
